Initial working model of influence.
Additions:
 - Reddit Data Loader script. Loads comment/submission
   information from a Reddit data dump archive file
   (from https://files.pushshift.io/reddit/) into a local
   Redis instance.
 - Influence detector models a simple graph relationship between
   submissions/comments and users. Authors influence comments and
   are influenced by the parent post. Post is influenced by the
   comments and by the submitter. No special weighting is performed.
 - Requirements file for easily starting a new virtual environment.

Modifications:
 - Ignore some virtual environment stuff.
 - Changed project title in readme.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Virtual Environment
+bin/
+include/
+lib/
+lib64
+man/
+pyvenv.cfg
+pip-selfcheck.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
