--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ man/
 pyvenv.cfg
 pip-selfcheck.json
 
+# LaTeX
+*.aux
+*.bbl
+*.log
+*.blg
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
