Report now contains discussion on Clustering.

--- a/report/Makefile
+++ b/report/Makefile
@@ -8,9 +8,10 @@ all: $(DOCUMENTS)
 clean:
 	rm -rf $(DOCUMENTS) *.aux *.log *.bbl *.blg
 
-report.pdf: root.tex
+report.pdf: root.tex root.bib
 	$(PDFLATEX) root.tex
 	$(BIBTEX) root
+	$(PDFLATEX) root.tex
 	$(PDFLATEX) root.tex
 	mv root.pdf $@
 
