Report ready for review!
Additions:
 - Starting on Slide desk for presentation.
 - Example Reddit figure.

Modifications:
 - PDF formatting for Report.

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,4 +1,4 @@
-DOCUMENTS = report.pdf
+DOCUMENTS = report.pdf slide_deck.pdf
 PDFLATEX = pdflatex
 BIBTEX = bibtex
 
@@ -14,5 +14,9 @@ report.pdf: root.tex root.bib figures/*.eps
 	$(PDFLATEX) root.tex
 	$(PDFLATEX) root.tex
 	mv root.pdf $@
+
+slide_deck.pdf: slide_deck.tex figures/*.eps
+	$(PDFLATEX) slide_deck.tex
+	$(PDFLATEX) slide_deck.tex
 
 .PHONY: all clean
